# notPaint

./: .clang-format  CMakeLists.txt  NotPaint.hpp  main.cpp
include/: CanvasMouse.hpp  Color.hpp  Drawable.hpp  GlfwHandle.hpp  Pixel.hpp  PixelGrid.hpp  Renderer.hpp  Scene.hpp  Window.hpp
include/Shapes/: Ellipse.hpp
include/core/: Mat3.hpp
include/figure/: Circle.hpp  Cross.hpp  Figure.hpp  Line.hpp  Polygon.hpp  Rectangle.hpp
include/figures/: Circle.hpp  Cross.hpp  Figure.hpp  Line.hpp  Polygon.hpp  Rectangle.hpp
include/graphics/: Color.hpp  Renderer.hpp  Shader.hpp
include/selector/: Selector.hpp
include/shape/: Shape.hpp
include/tool/: Circle.hpp  Cross.hpp  Line.hpp  Polygon.hpp  Rectangle.hpp  Tool.hpp
include/tools/: Circle.hpp  CircleTool.hpp  Cross.hpp  CrossTool.hpp  Line.hpp  LineTool.hpp  Polygon.hpp  PolygonTool.hpp  Rectangle.hpp  RectangleTool.hpp  Tool.hpp
include/transform/: Transform2D.hpp
shaders/: basic.frag  basic.vert
src/: Renderer.cpp  editor  main.cc  main.cpp
src/core/: Globals.cc  Globals.h  Globals.hpp  Input.cc  Input.h  Input.hpp  Renderer.cc  Renderer.h  Renderer.hpp  Scene.cc  Scene.h  Scene.hpp
src/enums/: Mode.h  ObjectType.h
src/graphics/: Renderer.cpp  Shader.cpp
src/math/: Color.h  Color.hpp  Vec2.hpp
src/objects/: LineObject.cc  LineObject.h  LineObject.hpp  Object.cc  Object.h  Object.hpp  PointObject.cc  PointObject.h  PointObject.hpp  PolygonObject.cc  PolygonObject.h  PolygonObject.hpp  PolylineObject.cc  PolylineObject.h  PolylineObject.hpp
src/utils/: Selection.cc  Selection.h  Selection.hpp
